--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,22 @@ version: '3.1'
 services:
   db:
     build: .
-    container_name: learningnest-db
+    container_name: devtraining-db
     restart: always
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - .docker/dbdata:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: docker
-      POSTGRES_DB: learningnest
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=learningnest
 
-
+  dbtest:
+    build: .
+    container_name: test-db
+    restart: always
+    ports:
+      - '5433:5432'
+    environment:
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=learningnest
